--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,5 @@ add_library(stb_image STATIC
     stb_image.h
 )
 
-target_include_directories(stb_image PUBLIC)
+target_include_directories(stb_image PUBLIC .)
 set_target_properties(stb_image PROPERTIES LINKER_LANGUAGE CXX)
